# Amfoss-Tasks

./: Introspection  Introspection.md  README.md
Task 0/: Readme.md
Task 1/: Readme.md
Task 10/: Readme.md
Task 10/PSET-1/: cash.c  mario.c  mario2.c
Task 10/PSET-2/: caesar.c  readability.c
Task 10/PSET-3/: plurality.c  runoff.c
Task 10/PSET-4/: filter.c
Task 2/: Readme.md
Task 3(Pending)/: Readme.md  jackjackcodes.cpp
Task 5/: Cargo.toml  Readme.md  Task5.rs
Task 9/: Readme.md  Task9.js
Task-13/: Readme.md  Task13.ino
Task-14/: Level 10  Level 7  Level 8  Level 9  Level2  Level3  Level4  Level5  Level6  Readme.md
