[package]
name = "Final"
version = "0.1.0"
authors = ["pranav"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = "0.10.9"
selectors = "0.22.0"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }